Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112317

[REG 6.4.2 -> 6.5] can't NOT install qmltooling anymore

XMLWordPrintable

    • Windows
    • 6d9a8c30e (dev), 635284e7e (6.5)

      Up until 6.5, I could prevent the installation of all the qmltooling plugins via windeployqt --no-qmltooling.

      These are totally useless when distributing an app and might even be considered a security risk.

      This doesn't work anymore with 6.5, as there's no separate QmlTooling module, but modules/Qml.json specifies "plugin_types": ["qmltooling"], instead and that pulls in those plugins without any chance to prevent it from the user's side, as soon as the app uses QML.

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            rgriebl Robert Griebl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes